--- a/_pre-tutorial-config.qmd
+++ b/_pre-tutorial-config.qmd
@@ -6,7 +6,7 @@ Setting up your environment:
     
   - The latest version of RStudio (`2024.04.2-764` or higher):
     
-  - The latest version of Quarto (`1.4.555` or higher):
+  - The latest version of Quarto `1.5` available at <https://quarto.org/docs/download/>
     
 
 - Install the following packages:
