--- a/examples-correction/new-penguins-pdf-demo.qmd
+++ b/examples-correction/new-penguins-pdf-demo.qmd
@@ -3,8 +3,11 @@ title: "A penguin story"
 date: "2024-07-08"
 format: 
   html:
-    toc: true
     theme: litera
+  pdf:
+    lot: true
+    lof: true
+toc: true
 code-annotations: hover
 ---
 
